2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	* Makefile.am: Install gemblemedicon.h

2008-07-28  Matthias Clasen  <mclasen@redhat.com>

	* gemblemedicon.[hc]: Add a GIcon implementation that can
	add an emblem to another icon.

	* gio.h:
	* Makefile.am:
	* gio.symbols: Glue

	* gloadableicon.c:
	* gfileicon.c: Small documentation additions.

2008-07-28  Tor Lillqvist  <tml@novell.com>

	* gwin32appinfo.c (g_win32_app_info_get_icon): Correct return
	type.

2008-07-27  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (gio-2.0.lib): Pass appropriate -machine flag to lib.exe.

2008-07-24  David Zeuthen  <davidz@redhat.com>

	* gmount.[ch]:
	* gio.symbols:
	Also export a g_mount_guess_content_type_sync() function.

2008-07-23  Matthias Clasen  <mclasen@redhat.com>

	529694 – SELinux context setting support

	* gfileinfo.c: Support setting selinux attributes.
	Patch by Tomas Bzatek

2008-07-22  Priit Laes <plaes@plaes.org>

	Bug 544140 - fam-helper 64-bit issue?

	* fam/fam-helper.c: Added missing include so compiler doesn't complain.

2008-07-21  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.17.4 ===

2008-07-20  Matthias Clasen  <mclasen@redhat.com>

	* gvolumemonitor.[hc]:
	* gmountoperation.c:
	* gioenums.h:
	* gdrive.c:
	* gvfs.c:
	* gmount.c: Documentation fixes

2008-07-19  Matthias Clasen  <mclasen@redhat.com>

	543504 – crash in Epiphany Web Browser: Opening local file

	* gappinfo.c:
	* gasyncresult.c:
	* gdesktopappinfo.c:
	* gdrive.c:
	* gfile.c:
	* gicon.c:
	* gloadableicon.c:
	* gmount.c:
	* gseekable.c:
	* gvolume.c: Register types thread-safely.
	Patch by Christian Persch

2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	* gcontenttype.c: Remove debug spew

2008-07-18  Matthias Clasen  <mclasen@redhat.com>

	Bug 543560 – enable gio-FEN back-end warnings on Solaris will crash
	any applications

	* fen/fen-kernel.c: Remove a warning that was causing
	crashes. Reported by Lin Ma.

2008-07-18  Matthias Clasen  <mclasen@redhat.com>
